@@ -19,6 +19,7 @@ package com.android.internal.protolog;
 import static android.tools.traces.Utils.busyWaitForDataSourceRegistration;
 import static android.tools.traces.Utils.busyWaitTracingSessionDoesntExist;
 import static android.tools.traces.Utils.busyWaitTracingSessionExists;
+import static android.tracing.perfetto.TestUtils.createTempWriter;
 
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertThrows;
@@ -33,15 +34,10 @@ import static org.mockito.Mockito.when;
 
 import static perfetto.protos.TracePacketOuterClass.TracePacket.SequenceFlags.SEQ_NEEDS_INCREMENTAL_STATE;
 
-import static java.io.File.createTempFile;
-
 import android.os.SystemClock;
 import android.platform.test.annotations.Presubmit;
-import android.tools.ScenarioBuilder;
 import android.tools.Tag;
 import android.tools.io.TraceType;
-import android.tools.traces.TraceConfig;
-import android.tools.traces.TraceConfigs;
 import android.tools.traces.io.ResultReader;
 import android.tools.traces.io.ResultWriter;
 import android.tools.traces.monitors.PerfettoTraceMonitor;
@@ -92,19 +88,6 @@ public class ProcessedPerfettoProtoLogImplTest {
     private static final String MOCK_VIEWER_CONFIG_FILE = "my/mock/viewer/config/file.pb";
     private final File mTracingDirectory = InstrumentationRegistry.getInstrumentation()
             .getTargetContext().getFilesDir();
-
-    private final ResultWriter mWriter = new ResultWriter()
-            .forScenario(new ScenarioBuilder()
-                    .forClass(createTempFile("temp", "").getName()).build())
-            .withOutputDir(mTracingDirectory)
-            .setRunComplete();
-
-    private final TraceConfigs mTraceConfig = new TraceConfigs(
-            new TraceConfig(false, true, false),
-            new TraceConfig(false, true, false),
-            new TraceConfig(false, true, false),
-            new TraceConfig(false, true, false)
-    );
 
     private static ProtoLogConfigurationService sProtoLogConfigurationService;
     private static ProtoLogDataSource sTestDataSource;
@@ -232,7 +215,7 @@ public class ProcessedPerfettoProtoLogImplTest {
             traceMonitor.start();
             assertTrue(sProtoLog.isProtoEnabled());
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(createTempWriter(mTracingDirectory));
         }
     }
 
@@ -245,7 +228,7 @@ public class ProcessedPerfettoProtoLogImplTest {
             traceMonitor.start();
             assertTrue(sProtoLog.isProtoEnabled());
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(createTempWriter(mTracingDirectory));
         }
 
         assertFalse(sProtoLog.isProtoEnabled());
@@ -256,6 +239,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(false, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             // Shouldn't be logging anything except WTF unless explicitly requested in the group
@@ -271,10 +256,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.WTF, TestProtoLogGroup.TEST_GROUP, 5,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -290,6 +275,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 TestProtoLogGroup.TEST_GROUP.toString(), LogLevel.DEBUG, true)),
                         TEST_PROTOLOG_DATASOURCE_NAME
                 ).build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
@@ -303,10 +290,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.WTF, TestProtoLogGroup.TEST_GROUP, 5,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(4);
@@ -325,6 +312,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 TestProtoLogGroup.TEST_GROUP.toString(), LogLevel.WARN, false)),
                         TEST_PROTOLOG_DATASOURCE_NAME
                     ).build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
@@ -338,10 +327,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.WTF, TestProtoLogGroup.TEST_GROUP, 5,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(3);
@@ -355,6 +344,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
@@ -368,10 +359,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.WTF, TestProtoLogGroup.TEST_GROUP, 5,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(5);
@@ -454,6 +445,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         long before;
         long after;
         try {
@@ -468,10 +461,10 @@ public class ProcessedPerfettoProtoLogImplTest {
                     new Object[]{"test", 1, 2, 3, 0.4, 0.5, 0.6, true});
             after = SystemClock.elapsedRealtimeNanos();
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -489,6 +482,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         long before;
         long after;
         try {
@@ -502,10 +497,10 @@ public class ProcessedPerfettoProtoLogImplTest {
                     "test", 1, 3, 0.4, true);
             after = SystemClock.elapsedRealtimeNanos();
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -522,15 +517,17 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -558,6 +555,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(
@@ -565,10 +564,10 @@ public class ProcessedPerfettoProtoLogImplTest {
                     0b01100100,
                     new Object[]{"test", 1, 0.1, true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         assertThrows(java.net.SocketException.class, reader::readProtoLogTrace);
     }
 
@@ -577,15 +576,17 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(false, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
                     0b11, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).isEmpty();
@@ -601,6 +602,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 true)),
                         TEST_PROTOLOG_DATASOURCE_NAME
                 ).build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
 
@@ -608,10 +611,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             ProtoLogImpl.d(TestProtoLogGroup.TEST_GROUP, 1,
                     0b11, true);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -657,13 +660,13 @@ public class ProcessedPerfettoProtoLogImplTest {
 
                 Truth.assertThat(cacheUpdateCallCount.get()).isEqualTo(2);
             } finally {
-                traceMonitor2.stop(mWriter);
+                traceMonitor2.stop(createTempWriter(mTracingDirectory));
             }
 
             Truth.assertThat(cacheUpdateCallCount.get()).isEqualTo(3);
 
         } finally {
-            traceMonitor1.stop(mWriter);
+            traceMonitor1.stop(createTempWriter(mTracingDirectory));
         }
 
         Truth.assertThat(cacheUpdateCallCount.get()).isEqualTo(4);
@@ -729,7 +732,7 @@ public class ProcessedPerfettoProtoLogImplTest {
                 Truth.assertThat(sProtoLog.isEnabled(TestProtoLogGroup.TEST_GROUP, LogLevel.WTF))
                         .isTrue();
             } finally {
-                traceMonitor2.stop(mWriter);
+                traceMonitor2.stop(createTempWriter(mTracingDirectory));
             }
 
             Truth.assertThat(sProtoLog.isEnabled(TestProtoLogGroup.TEST_GROUP, LogLevel.DEBUG))
@@ -745,7 +748,7 @@ public class ProcessedPerfettoProtoLogImplTest {
             Truth.assertThat(sProtoLog.isEnabled(TestProtoLogGroup.TEST_GROUP, LogLevel.WTF))
                     .isTrue();
         } finally {
-            traceMonitor1.stop(mWriter);
+            traceMonitor1.stop(createTempWriter(mTracingDirectory));
         }
 
         Truth.assertThat(sProtoLog.isEnabled(TestProtoLogGroup.TEST_GROUP, LogLevel.DEBUG))
@@ -768,20 +771,21 @@ public class ProcessedPerfettoProtoLogImplTest {
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
 
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
 
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
                     "My test null string: %s", (Object) null);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
-        Truth.assertThat(protolog.messages.get(0).getMessage())
+        Truth.assertThat(protolog.messages.getFirst().getMessage())
                 .isEqualTo("My test null string: null");
     }
 
@@ -791,20 +795,21 @@ public class ProcessedPerfettoProtoLogImplTest {
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
 
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
 
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
                     "My null args: %d, %f, %b", null, null, null);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
-        Truth.assertThat(protolog.messages.get(0).getMessage())
+        Truth.assertThat(protolog.messages.getFirst().getMessage())
                 .isEqualTo("My null args: 0, 0.000000, false");
     }
 
@@ -818,12 +823,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
 
-        final ResultWriter writer2 = new ResultWriter()
-                .forScenario(new ScenarioBuilder()
-                        .forClass(createTempFile("temp", "").getName()).build())
-                .withOutputDir(mTracingDirectory)
-                .setRunComplete();
-
+        final var writer = createTempWriter(mTracingDirectory);
+        final var writer2 = createTempWriter(mTracingDirectory);
         try {
             traceMonitor1.start();
             traceMonitor2.start();
@@ -831,22 +832,22 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor1.stop(mWriter);
+            traceMonitor1.stop(writer);
             traceMonitor2.stop(writer2);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protologFromMonitor1 = reader.readProtoLogTrace();
 
-        final ResultReader reader2 = new ResultReader(writer2.write(), mTraceConfig);
+        final ResultReader reader2 = new ResultReader(writer2.write());
         final ProtoLogTrace protologFromMonitor2 = reader2.readProtoLogTrace();
 
         Truth.assertThat(protologFromMonitor1.messages).hasSize(1);
-        Truth.assertThat(protologFromMonitor1.messages.get(0).getMessage())
+        Truth.assertThat(protologFromMonitor1.messages.getFirst().getMessage())
                 .isEqualTo("My Test Debug Log Message true");
 
         Truth.assertThat(protologFromMonitor2.messages).hasSize(1);
-        Truth.assertThat(protologFromMonitor2.messages.get(0).getMessage())
+        Truth.assertThat(protologFromMonitor2.messages.getFirst().getMessage())
                 .isEqualTo("My Test Debug Log Message true");
     }
 
@@ -855,6 +856,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(LogLevel.WARN, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
@@ -864,10 +867,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.ERROR, TestProtoLogGroup.TEST_GROUP,
                     "This message should also be logged %d", 567);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(2);
@@ -888,6 +891,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(LogLevel.DEBUG, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.VERBOSE, TestProtoLogGroup.TEST_GROUP,
@@ -895,17 +900,17 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
                     "This message should be logged %d", 123);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
 
-        Truth.assertThat(protolog.messages.get(0).getLevel())
+        Truth.assertThat(protolog.messages.getFirst().getLevel())
                 .isEqualTo(LogLevel.DEBUG);
-        Truth.assertThat(protolog.messages.get(0).getMessage())
+        Truth.assertThat(protolog.messages.getFirst().getMessage())
                 .isEqualTo("This message should be logged 123");
     }
 
@@ -917,6 +922,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 TestProtoLogGroup.TEST_GROUP.name(), LogLevel.DEBUG, false)
                 ), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.VERBOSE, TestProtoLogGroup.TEST_GROUP,
@@ -924,17 +931,17 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
                     "This message should be logged %d", 123);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
 
-        Truth.assertThat(protolog.messages.get(0).getLevel())
+        Truth.assertThat(protolog.messages.getFirst().getLevel())
                 .isEqualTo(LogLevel.DEBUG);
-        Truth.assertThat(protolog.messages.get(0).getMessage())
+        Truth.assertThat(protolog.messages.getFirst().getMessage())
                 .isEqualTo("This message should be logged 123");
     }
 
@@ -983,6 +990,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             assertTrue("ProtoLog should be enabled after starting the trace.",
@@ -992,10 +1001,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
                     LogDataType.BOOLEAN, new Object[]{true}); // "true" to distinguish
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -1062,22 +1071,22 @@ public class ProcessedPerfettoProtoLogImplTest {
         releaseExecutorLatch.countDown();
 
         var writer0 = new ResultWriter()
-                .forScenario(new ScenarioBuilder().forClass("scenario0").build())
+                .withName("scenario0")
                 .withOutputDir(mTracingDirectory).setRunComplete();
         traceMonitor0.stop(writer0);
 
         var writer1 = new ResultWriter()
-                .forScenario(new ScenarioBuilder().forClass("scenario1").build())
+                .withName("scenario1")
                 .withOutputDir(mTracingDirectory).setRunComplete();
         traceMonitor1.stop(writer1);
         busyWaitTracingSessionDoesntExist("test_session1");
 
-        final ResultReader reader0 = new ResultReader(writer0.write(), mTraceConfig);
+        final ResultReader reader0 = new ResultReader(writer0.write());
         final ProtoLogTrace protolog0 = reader0.readProtoLogTrace();
 
         Truth.assertThat(protolog0.messages).hasSize(numOldMessages + numNewMessages);
 
-        final ResultReader reader1 = new ResultReader(writer1.write(), mTraceConfig);
+        final ResultReader reader1 = new ResultReader(writer1.write());
         final ProtoLogTrace protolog1 = reader1.readProtoLogTrace();
 
         Truth.assertThat(protolog1.messages).hasSize(numNewMessages);
@@ -1105,6 +1114,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             assertTrue("ProtoLog should be enabled after starting the trace.",
@@ -1161,11 +1172,11 @@ public class ProcessedPerfettoProtoLogImplTest {
             if (allowProcessingToContinueLatch.getCount() > 0) {
                 allowProcessingToContinueLatch.countDown();
             }
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
         // Verify that all messages were written to the trace.
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(numMessages);
@@ -1206,6 +1217,7 @@ public class ProcessedPerfettoProtoLogImplTest {
             }
         });
 
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             assertTrue("ProtoLog tracing should be enabled", sProtoLog.isProtoEnabled());
@@ -1218,10 +1230,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             // Unpause the background thread.
             backgroundThreadPausedLatch.countDown();
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader resultReader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader resultReader = new ResultReader(writer.write());
         final ProtoLogTrace protologTrace = resultReader.readProtoLogTrace();
 
         Truth.assertThat(protologTrace.messages).hasSize(1);
@@ -1240,6 +1252,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 true)), // enable stacktrace
                         TEST_PROTOLOG_DATASOURCE_NAME
                 ).build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
 
@@ -1248,10 +1262,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final var traceBytes = reader.readBytes(TraceType.PERFETTO, Tag.ALL);
         final var trace = Trace.parseFrom(traceBytes);
         final var protoLogMessagePackets = trace.getPacketList().stream()
@@ -1271,6 +1285,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
 
@@ -1279,10 +1295,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 6,
                     LogDataType.STRING, new Object[]{"test_string"});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final var traceBytes = reader.readBytes(TraceType.PERFETTO, Tag.ALL);
         final var trace = Trace.parseFrom(traceBytes);
         final var protoLogMessagePackets = trace.getPacketList().stream()
